// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TruncatedText matches snapshot 1`] = `
<p
  className="truncated-text-note inactive"
  id="1"
>
  asdf
</p>
`;

exports[`TruncatedText matches snapshot when focused 1`] = `
<p
  className="truncated-text-note active"
  id="1"
>
  asdf
</p>
`;
